configs/template/ingress.yaml
# Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file. The original repo for
# this file is https://github.com/superproj/zero.
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zero
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  ingressClassName: traefik
  rules:
  - host: zero.usercenter.superproj.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zero-usercenter
            port:
              name: http
  - host: zero.apiserver.superproj.com
    http:               
      paths:                          
      - backend:
          service:
            name: zero-apiserver
            port: 
              name: https       
        path: /  
        pathType: Prefix 
  tls:
    - hosts:
      - zero.apiserver.superproj.com
      - zero.usercenter.superproj.com
      - zero.gateway.superproj.com  
      secretName: zero-tls
