configs/template/ingressroutetcp.yaml
# Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file. The original repo for
# this file is https://github.com/superproj/zero.
#

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: zero-apiserver-tcp
spec:
  entryPoints:
  - zero-apiserver
  routes:
  - match: HostSNI(`*`)
    services:
    - name: zero-apiserver
      port: 8443
